fast boot time: jfxapps reload apps from filesystem without maven