@@ -120,6 +120,8 @@
                         java.base=${com.gluonhq.jfxapps:java.base.patch:jar}
                         --add-exports
                         java.base/javapatch.lang.module=java.base.patch.link
+                        --add-exports
+                        java.base/javapatch.lang.module=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -140,6 +142,8 @@
                                 java.base=${com.gluonhq.jfxapps:java.base.patch:jar}
                                 --add-exports
                                 java.base/javapatch.lang.module=java.base.patch.link
+                                --add-exports
+                        		java.base/javapatch.lang.module=ALL-UNNAMED
                             </argLine>
                         </configuration>
                         <goals>
